--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,13 @@
 
 
+org.hibernate.validator.constraints.Email.message = \u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u306e\u5f62\u5f0f\u304c\u6b63\u3057\u304f\u3042\u308a\u307e\u305b\u3093\u3002
 org.hibernate.validator.constraints.NotEmpty.message = {0}\u3092\u5165\u529b\u3057\u3066\u4e0b\u3055\u3044\u3002
 
 error.login.invalid = \u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u304b\u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u9055\u3044\u307e\u3059\u3002
+error.agree.kiyaku = \u5229\u7528\u898f\u7d04\u306b\u540c\u610f\u3057\u3066\u4e0b\u3055\u3044\u3002
+error.agree.privacy = \u500b\u4eba\u60c5\u5831\u53d6\u308a\u6271\u3044\u540c\u610f\u66f8\u306b\u540c\u610f\u3057\u3066\u4e0b\u3055\u3044\u3002
 
 mailAddress=\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9
 password=\u30d1\u30b9\u30ef\u30fc\u30c9
+name=\u304a\u540d\u524d
+nickname=\u30cb\u30c3\u30af\u30cd\u30fc\u30e0
