--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,3 +11,4 @@ mailAddress=\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9
 password=\u30d1\u30b9\u30ef\u30fc\u30c9
 name=\u304a\u540d\u524d
 nickname=\u30cb\u30c3\u30af\u30cd\u30fc\u30e0
+blogUrl=\u30d6\u30ed\u30b0URL
